<resources>
    <string name="app_name" translatable="false">SRec Scanner</string>

    <string name="fui_progress_dialog_signing_up">Creando tu nueva cuenta…</string>
    <string name="sign_in_cancelled">Cancelado por el usuario</string>
    <string name="no_internet_connection">No estás conectado a internet</string>
    <string name="unknown_error">Error desconocido</string>
    <string name="num_total_images">/10 Imágenes</string>
    <string name="imagen_de_la_nube">Imagen de la nube</string>
    <string name="boton_configurar">boton configurar</string>
    <string name="insert_tab" translatable="false">Insert Tab</string>
    <string name="untitled_placeholder" translatable="false">untitled</string>
    <string name="start_scan">Empezar escaneo</string>
    <string name="uploading_photo">Subiendo foto …</string>
    <string name="imagenes">Imágenes:</string>
    <string name="fullscreen_image" translatable="false">Fullscreen image</string>
    <string name="imagen_de_inicio_de_sesi_n">Imagen de inicio de sesión</string>
    <string name="logo_de_inicio_de_sesi_n">Logo de inicio de sesión</string>
    <string name="scanner">Scanner</string>
    <string name="srec">SRec</string>
    <string name="by_jose_zamora" translatable="false">by Jose Zamora</string>
    <string name="boton_cambiar_de_estilo">Boton cambiar de estilo</string>
    <string name="cuadernos">Cuadernos</string>
    <string name="escanear">Escanear</string>
    <string name="conecta_con_srec">Conecta con SRec</string>
    <string name="escanea_el_c_digo_qr_de_la_aplicaci_n_srecreceiver_para_conectarte">Escanea el código QR de la aplicación SRecReceiver para conectarte.</string>
    <string name="descripci_n_del_error">Descripción del Error</string>
    <string name="explica_fallo">Por favor, explique brevemente el fallo …</string>
    <string name="cargando">Cargando…</string>
    <string name="introduce_un_nombre">Introduce un nombre</string>
    <string name="imagen_del_lenguaje_del_c_digo">Imagen del lenguaje del código</string>
    <string name="boton_escanear">Boton escanear</string>
    <string name="boton_fullscreen">Boton fullscreen.</string>
    <string name="imagen_del_usuario">imagen del usuario</string>
    <string name="conectar_con_srecreceiver">Conectar con SRecReceiver</string>
    <string name="informar_un_error">Informar un error</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="buscar">Buscar</string>
    <string name="conectar_con_srec">Conectar con SRecReceiver</string>
    <string name="desconectar_de_srec">Desconectar de SRecReceiver</string>
    <string name="tienes_que_añadir_imagen">Tienes que añadir una imagen</string>
    <string name="recortar">Recortar</string>
    <string name="arrastra_y_suelta">Arrastra y suelta la foto en la posición que desees</string>
    <string name="salir_sin_guardar">Estás a punto de salir y hay cambios que no se han guardado.¿Desea guardar cambios?</string>
    <string name="salir_sin_guardar_vision_activity">¿Desea guardar el resultado?</string>
    <string name="guardar">Guardar</string>
    <string name="descartar">Descartar</string>
    <string name="editor_de_cuaderno">Editor de cuaderno</string>
    <string name="deshacer">Deshacer</string>
    <string name="foto_eliminada">Foto eliminada</string>
    <string name="sel_imagen">Selecciona una imagen</string>
    <string name="no_añadir_mas">No puedes añadir más imágenes a este Cuaderno</string>
    <string name="con_srec">Conexión con SRecReceiver</string>
    <string name="fallo_auth">Fallo en la Autenticación:</string>
    <string name="eliminar">Eliminar</string>
    <string name="nuevo_cuaderno">Nuevo Cuaderno</string>
    <string name="cancelar">Cancelar</string>
    <string name="informe_enviado">Informe enviado, trabajaremos para solucionar el problema.</string>
    <string name="previsualización">Previsualización del Código</string>
    <string name="rename">Renombrar fichero</string>
    <string name="aceptar">Aceptar</string>
    <string name="eliminado">ha sido eliminado</string>
    <string name="iniciar_sesi_n_con_google">Iniciar Sesión con Google</string>
    <string name="not_same_network">No estás conectado a la misma red que SRecReceiver</string>
    <string name="undo">Deshacer</string>
    <string name="delete">Eliminar</string>
    <string name="new_notebook">Nuevo cuaderno</string>
    <string name="info">Información</string>
    <string name="report">Informe de Error</string>
    <string name="no_se_detecta_n_conexi_n_con_internet">No se detecta\n conexión con Internet</string>
    <string name="sin_conexi_n">Sin conexión</string>
    <string name="ajustes">Ajustes</string>
    <string name="crea_">Crea</string>
    <string name="escanea_">Escanea</string>
    <string name="comparte_">Comparte</string>
    <string name="srecscanner_" translatable="false">SRecScanner</string>
    <string name="imagen_logo_fondo">Imagen logo fondo</string>
    <string name="visitar_sitio_web">Visitar sitio web</string>

</resources>
