<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity"
    android:id="@+id/login_layout"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTitles">


    <View
        android:id="@+id/centerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_above="@+id/textView"
        android:backgroundTint="@color/colorAccent"
        android:layout_centerInParent="true"
        android:layout_margin="25dp"
        android:text="@string/iniciar_sesi_n_con_google"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@id/ll_"
        android:layout_alignParentBottom="true"
        android:alpha="0.2"
        android:scaleType="centerCrop"

        android:contentDescription="@string/imagen_logo_fondo"
        android:src="@drawable/ic_login_logo_dark" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="@string/by_jose_zamora"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorPrimary"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:id="@+id/ll_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/centerView"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/crea_"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/escanea_"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/comparte_"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/srecscanner_"
                android:textColor="@color/colorPrimary"
                android:textSize="48sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
